# JOB-20260614123056-000096

./: .gitignore  README.md  SPEC.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md
services/ai_judgment/: Dockerfile  README.md  pyproject.toml
services/ai_judgment/app/: __init__.py  main.py
services/ai_judgment/app/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  ollama_adapter.py  openai_adapter.py  vllm_adapter.py
services/ai_judgment/app/api/: classify.py  extract.py  health.py  judgment.py  summarize.py
services/ai_judgment/app/core/: __init__.py  cost.py  parsers.py  prompts.py
services/ai_judgment/app/services/: audit_service.py  judgment_service.py
services/ai_judgment/app/workers/: __init__.py  consumer.py
services/automation_engine/: Dockerfile  README.md  pyproject.toml
services/automation_engine/app/: __init__.py  main.py
services/automation_engine/app/api/: __init__.py  delays.py  disputes.py  health.py  orders.py  stock.py
services/automation_engine/app/core/: __init__.py  rules.py
services/automation_engine/app/models/: __init__.py  orm.py
services/automation_engine/app/schemas/: __init__.py  dto.py
services/automation_engine/app/services/: delay_service.py  dispute_service.py  order_service.py  stock_service.py
services/automation_engine/app/workers/: __init__.py  scheduler.py
services/data_pipeline/: Dockerfile  README.md  pyproject.toml
services/data_pipeline/app/: __init__.py  main.py
services/data_pipeline/app/api/: analytics.py  datasets.py  health.py  jobs.py
services/data_pipeline/app/core/: __init__.py  analyzers.py  batching.py  streaming.py
services/data_pipeline/app/services/: __init__.py  analytics_service.py  ecommerce_connector.py  job_service.py
services/data_pipeline/app/workers/: __init__.py  runner.py
services/reporting/: Dockerfile  README.md  pyproject.toml
services/reporting/app/: __init__.py  main.py
services/reporting/app/api/: health.py  reports.py
services/reporting/app/core/: __init__.py  aggregations.py  renderers.py  templating.py
services/reporting/app/models/: __init__.py  orm.py
services/reporting/app/services/: delivery_service.py  report_service.py  template_service.py
services/reporting/app/workers/: __init__.py  scheduler.py
services/whatsapp_adapter/: Dockerfile  README.md  pyproject.toml
services/whatsapp_adapter/app/: __init__.py  main.py
services/whatsapp_adapter/app/api/: deliver.py  health.py  status.py  webhooks.py
services/whatsapp_adapter/app/core/: __init__.py  dedupe.py  rate_limiter.py
services/whatsapp_adapter/app/models/: __init__.py  orm.py
services/whatsapp_adapter/app/services/: delivery_service.py  inbound_service.py  workspace_client.py
services/whatsapp_adapter/app/workers/: retry_worker.py
shared/: __init__.py
shared/common/: __init__.py  config.py  db.py  http.py  ids.py  logging.py  time.py
shared/contracts/: __init__.py  ai_contract.py  automation_contract.py  whatsapp_contract.py
shared/messaging/: __init__.py  events.py  queue_contract.py
tests/: README.md
tests/unit/: test_ai_parsers.py  test_analyzers.py  test_contracts.py  test_reporting.py  test_rules.py  test_whatsapp.py
