[project]
name = "kman-ai-judgment"
version = "0.1.0"
description = "KMan AI Judgment Service: hosted-first, adapter pattern, swap-ready for self-hosted."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "openai>=1.30",
  "anthropic>=0.30",
  "httpx>=0.26",
  "redis>=5.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8002 --reload"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8002"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
