[project]
name = "kman-whatsapp-adapter"
version = "0.1.0"
description = "KMan WhatsApp Adapter: the only service that talks to the WhatsApp workspace."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "httpx>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8005 --reload"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8005"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
